# shader-render-in-cpu-and-cuda

./: .gitignore  CMakeLists.txt  README.md
include/: cpu_shader.h  run_on_cuda.h  utils.h
src/: cpu_shader.cpp  run_on_cuda.cu
src/entries/: cpu_shader_entry.cpp  cuda_shader_entry.cu  unified_shader_entry.inc
